Issue #1774 - Make menulist-button visible again in gtk3

--- a/toolkit/themes/linux/global/menulist.css
+++ b/toolkit/themes/linux/global/menulist.css
@@ -73,6 +73,7 @@ menulist[editable="true"] {
 menulist[editable="true"] > .menulist-dropmarker {
   display: -moz-box;
   -moz-appearance: menulist-button;
+  min-width: 2em;
 }
 
 html|*.menulist-editable-input {
